SOLR-16500: Enable JDK 19 preview options for MMapDirectory V2