@@ -1253,6 +1253,12 @@ if !JAVA_MAJOR_VERSION! GEQ 17  (
   echo Java %JAVA_MAJOR_VERSION% detected. Enabled workaround for SOLR-16463
 )
 
+REM Enable JDK 19 preview options for MMapDirectory V2, see https://issues.apache.org/jira/browse/SOLR-16500
+if !JAVA_MAJOR_VERSION! EQU 19  (
+  set SOLR_OPTS=%SOLR_OPTS% --enable-preview
+  echo Java $JAVA_VER_NUM detected. Added --enable-preview for MMapDirectory V2. See SOLR-16500
+)
+
 if !JAVA_MAJOR_VERSION! GEQ 9 if NOT "%JAVA_VENDOR%" == "OpenJ9" (
   IF NOT "%GC_LOG_OPTS%"=="" (
     echo ERROR: On Java 9 you cannot set GC_LOG_OPTS, only default GC logging is available. Exiting
